# algothon-quant-

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.simple  JuliaProject.toml  POLYGLOT_README.md  README.md  demo_backtester.py  demo_loader.py  demo_strategies.py  docker-compose.yml  main.py  pyproject.toml  requirements_simple.txt  run_tests.py  simple_main.py  test_algorithm.py
.github/workflows/: ci.yml
backend/: __init__.py  cli.py
backend/core/: __init__.py  algorithms.py  math_utils.py  validation.py
backend/data/: __init__.py  loader.py  loaders.py  processors.py  validators.py
backend/evaluation/: __init__.py  backtester.py  metrics.py  reporting.py
backend/models/: __init__.py  base.py  classification.py  ensemble.py  mean_reversion.py  regression.py  time_series.py
backend/strategies/: base.py  mean_reversion.py  momentum.py  portfolio.py
backend/utils/: __init__.py  config.py  decorators.py  logging.py
frontend/nextjs/: next.config.js  package-lock.json  package.json
frontend/nextjs/.next/: trace
frontend/nextjs/.next/cache/: .rscinfo
frontend/nextjs/.next/cache/webpack/client-development/: index.pack.gz.old
frontend/nextjs/.next/cache/webpack/server-development/: index.pack.gz.old
frontend/nextjs/.next/server/: server-reference-manifest.json  webpack-api-runtime.js  webpack-runtime.js
frontend/nextjs/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/nextjs/.next/server/pages/api/: backtest.js
frontend/nextjs/.next/server/vendor-chunks/: @swc.js  object-assign.js  prop-types.js  react-is.js  react-plotly.js.js
frontend/nextjs/.next/static/chunks/: app-pages-internals.js  react-refresh.js  webpack.js
frontend/nextjs/.next/static/webpack/: fbd7ef7e50f900a7.webpack.hot-update.json  webpack.ce112e98238e3490.hot-update.js  webpack.fbd7ef7e50f900a7.hot-update.js
frontend/nextjs/.next/types/app/: layout.ts  page.ts
frontend/nextjs/mlruns/0/: meta.yaml
frontend/nextjs/src/app/: page.tsx
frontend/nextjs/src/pages/api/: backtest.ts
mlruns/0/: meta.yaml
mlruns/0/07a3a1fb85964d9599b8f955af28f856/: meta.yaml
mlruns/0/07a3a1fb85964d9599b8f955af28f856/metrics/: n_days  n_instruments
mlruns/0/0e215ac5e2fd48fca8c52b7f8e0ee604/: meta.yaml
mlruns/0/0e215ac5e2fd48fca8c52b7f8e0ee604/metrics/: n_days  n_instruments
mlruns/0/1493d52353a84b27ae724a72fe7f2471/: meta.yaml
mlruns/0/1493d52353a84b27ae724a72fe7f2471/metrics/: n_days  n_instruments
mlruns/0/3f812b939bf94f7c8fce58a0d8e37358/: meta.yaml
mlruns/0/3f812b939bf94f7c8fce58a0d8e37358/metrics/: n_days  n_instruments
mlruns/0/43eee86e4e6247508dd8b5d4c47b35ea/: meta.yaml
mlruns/0/43eee86e4e6247508dd8b5d4c47b35ea/metrics/: n_days  n_instruments
mlruns/0/54771adfe1a046a7adfc1e34fa113a31/: meta.yaml
mlruns/0/54771adfe1a046a7adfc1e34fa113a31/metrics/: n_days  n_instruments
mlruns/0/6df11c85fb084d68beeb6f52ac39b7ba/: meta.yaml
mlruns/0/6df11c85fb084d68beeb6f52ac39b7ba/metrics/: n_days  n_instruments
mlruns/0/767b4f57b8db435f938dafd71f033602/: meta.yaml
mlruns/0/767b4f57b8db435f938dafd71f033602/metrics/: n_days  n_instruments
mlruns/0/767b4f57b8db435f938dafd71f033602/tags/: mlflow.runName
mlruns/0/7c398d319dbe42359b6c4086a8024e6c/: meta.yaml
mlruns/0/7c398d319dbe42359b6c4086a8024e6c/metrics/: n_days  n_instruments
mlruns/0/7c88a55672004517b3f8ea0b9ce7b3aa/: meta.yaml
mlruns/0/7c88a55672004517b3f8ea0b9ce7b3aa/metrics/: n_days  n_instruments
mlruns/0/83d375c607174d268b0ec17f03208f8d/: meta.yaml
mlruns/0/83d375c607174d268b0ec17f03208f8d/metrics/: n_days  n_instruments
mlruns/0/8a8fc65d2951484a8be0baabd14d467b/: meta.yaml
mlruns/0/8a8fc65d2951484a8be0baabd14d467b/metrics/: n_days  n_instruments
mlruns/0/8b2ce438aebe406782b817771e23a5fe/: meta.yaml
mlruns/0/8b2ce438aebe406782b817771e23a5fe/metrics/: n_days  n_instruments
mlruns/0/8b2ce438aebe406782b817771e23a5fe/tags/: mlflow.runName  mlflow.source.git.commit
mlruns/0/b28c1824f75a4e8fbbd85d24853502c4/: meta.yaml
mlruns/0/b28c1824f75a4e8fbbd85d24853502c4/metrics/: n_days  n_instruments
mlruns/0/b28c1824f75a4e8fbbd85d24853502c4/tags/: mlflow.runName
mlruns/0/cd1c615dd7c445f6b0d8753212a2c281/: meta.yaml
mlruns/0/cd1c615dd7c445f6b0d8753212a2c281/metrics/: n_days  n_instruments
mlruns/0/cd1c615dd7c445f6b0d8753212a2c281/tags/: mlflow.runName  mlflow.source.name
mlruns/0/d06dc89f66504279810afddcc3b92924/: meta.yaml
mlruns/0/d06dc89f66504279810afddcc3b92924/metrics/: n_days  n_instruments
mlruns/0/ddd1cf2ed9d44683a0fe4f445939dd25/: meta.yaml
mlruns/0/ddd1cf2ed9d44683a0fe4f445939dd25/metrics/: n_days  n_instruments
mlruns/0/f594047966e84822ad54d5c632bf24ac/: meta.yaml
mlruns/0/f594047966e84822ad54d5c632bf24ac/metrics/: n_days  n_instruments
mlruns/0/f594047966e84822ad54d5c632bf24ac/tags/: mlflow.runName  mlflow.source.name
mlruns/0/f6ab19d82d0541589a2e6f70a329f474/: meta.yaml
mlruns/0/f6ab19d82d0541589a2e6f70a329f474/metrics/: n_days  n_instruments
mlruns/0/fbd8e60576b6424892c1a2c84c121e35/: meta.yaml
mlruns/0/fbd8e60576b6424892c1a2c84c121e35/metrics/: n_days  n_instruments
mlruns/0/fbd8e60576b6424892c1a2c84c121e35/tags/: mlflow.runName
rust/fastcalc/: Cargo.toml
rust/fastcalc/src/: lib.rs
rust/fastcalc/tests/: lib.rs
scripts/: register_final.py  start-services.sh
src/: AlgothonQuant.jl  lib.rs
tests/: __init__.py  test_backtester.py  test_fastcalc.py  test_loader.py  test_strategies.py  test_toy_matrix.py
